Fixed double code (study abroad) added some padding to nav, changed font color and minor css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/bmv2dop.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-
     <title>Cur2</title>
 </head>
 
@@ -53,22 +51,7 @@
             <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
         </div>
     </section>
-    <!-- introduction -->
-    <section id="introduction" class="introduction hide">
 
-        <div class="img-header img-intro">
-            <p class="title-section">
-                MULTIMEDIA DESIGN
-                <br>AND COMMUNICATION</p>
-        </div>
-        <div class="intro-container">
-            <h2 class="sub-section">What is Multimedia Design and Communication?</h2>
-
-            <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
-
-            <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
-        </div>
-    </section>
     <!-- study program -->
     <section id="program" class="study-program hide">
         <div class="img-header img-program">
@@ -89,74 +72,6 @@
             <h2 class="sub-section">
                 Program Structure
             </h2>
-            <div class="study-content">
-                The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
-            </div>
-            <div class="time">
-                2 years / 4 semesters / 120 ECTS
-            </div>
-            <div class="table">
-                <div class="year">
-                    First Year
-                </div>
-                <div class="semester">
-                    1st Semester
-                </div>
-                <div class="semester">
-                    2nd Semester
-                </div>
-                <div class="project">
-                    Multimedia Production 1
-                </div>
-                <div class="project">
-                    Multimedia Production 2
-                </div>
-
-               
-                <div class="year">
-                    Second Year
-                </div>
-                <div class="semester">
-                    3rd Semester
-                </div>
-                <div class="semester">
-                    4th Semester
-                </div>
-                <div class="project">
-                    Multimedia Production 3
-                </div>
-                <div class="project">
-                    Internship
-                </div>
-                <div class="project">
-                    Electives
-                </div>
-                <div class="project">
-                    Final Exam
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- study program -->
-    <section id="program" class="study-program hide">
-        <div class="img-header img-program">
-            <p class="title-section">
-                STUDY PROGRAM
-            </p>
-        </div>
-        <div class="study-container">
-            <div class="study-title-2">
-                Core Areas
-            </div>
-            <div class="study-content">
-                The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
-            </div>
-            <div class="cores">
-                CORES
-            </div>
-            <div class="study-title-2">
-                Program Structure
-            </div>
             <div class="study-content">
                 The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
             </div>
@@ -202,7 +117,6 @@
                 <div class="project">
                     Final Exam
                 </div>
-
             </div>
         </div>
     </section>
@@ -412,6 +326,7 @@
             </div>
         </div>
     </section>
+
     <!-- study abroad -->
     <section id="abroad" class="study-abroad hide">
         <div class="img-header img-abroad">
@@ -422,50 +337,14 @@
 
         <div class="abroad-container">
 
-         <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students. </p>
-
-            <div class="images-container">
-                <div class="img1"></div>
-                <div class="img2"></div>
-                <div class="img3"></div>
-                <div class="img4"></div>
-            </div>
-
-            <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. </p>
-
-            <div class="country-container">
-                <div class="country">
-                    <h3> AUSTRALIA</h3>
-                    Melbourne Deakin University
-
-                    <h3>BRAZIL</h3>
-                    Sao Paulo Senac University
-
-                    <h3>CANADA</h3>
-                    Toronto Ryerson University
-
-                    <h3>IRELAND</h3>
-                    Dublin Griffith College
-                </div>
-                <div class="country">
-                    <h3>KOREA </h3>
-                    Seoul Konkuk University
-
-                    <h3>PORTUGAL</h3>
-                    Lisboa IADE
-
-                    <h3>SPAIN </h3>
-                    Barcelona Universitat Ramon Llul ESDI
-
-        <div class="abroad-container">
-            <div class="images-container">
-                <div class="img1"></div>
-                <div class="img2"></div>
-                <div class="img3"></div>
-                <div class="img4"></div>
-            </div>
-
             <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students. </p>
+
+            <div class="images-container">
+                <div class="img1"></div>
+                <div class="img2"></div>
+                <div class="img3"></div>
+                <div class="img4"></div>
+            </div>
 
             <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. </p>
 
@@ -523,13 +402,13 @@
 
             <p>Hey! Cafe
                 <br>Join us every Tuesday and Thursday: Studiehuset, Guldbergsgade 29N, 2200 Copenhagen N</p>
-                <div class="instagram">
+            <div class="instagram">
                 <img src="img/rooftop.jpg" alt="rooftop">
                 <img src="img/present.jpg" alt="presentation">
                 <img src="img/car.jpg" alt="car">
                 <img src="img/bar.jpg" alt="bar">
-                </div>
-                <!--- new photos --->
+            </div>
+            <!--- new photos --->
 
 
         </div>
@@ -574,7 +453,7 @@
             </div>
             <div class="contact-table">
                 <div class="email">
-                    email:
+                    E-mail:
                     <input type="email" />
                     <p><textarea name="comments" cols="50" rows="10">Leave a message
             </textarea></p>
