improve margin on website

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
     </section>
     <!-- introduction -->
     <section id="introduction" class="introduction hide">
-
+        <div class="intro-container">
         <div class="img-header img-intro">
             <p class="title-section">
                 MULTIMEDIA DESIGN
                 <br>AND COMMUNICATION</p>
         </div>
-        <div class="intro-container">
             <h2>What is Multimedia Design and Communication?</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
@@ -51,12 +50,12 @@
     </section>
     <!-- study program -->
     <section id="program" class="study-program hide">
+       <div class="study-container">
         <div class="img-header img-program">
             <p class="title-section">
                 STUDY PROGRAM
             </p>
         </div>
-        <div class="study-container">
             <h2 class="sub-section">
                 Core Areas
             </h2>
@@ -244,12 +243,12 @@
 
     <!-- admission -->
     <section id="admission" class="admission hide">
+        <div class="admission-container">
         <div class="img-header img-admission">
             <p class="title-section">
                 ADMISSION
             </p>
         </div>
-        <div class="admission-container">
             <div class="admission-desc">
                 <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
 
@@ -325,13 +324,12 @@
     </section>
     <!-- study abroad -->
     <section id="abroad" class="study-abroad hide">
+       <div class="abroad-container">
         <div class="img-header img-abroad">
             <p class="title-section">
                 STUDY ABROAD
             </p>
         </div>
-
-        <div class="abroad-container">
 
          <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students. </p>
 
@@ -381,17 +379,18 @@
     </section>
     <!-- student life -->
     <section id="student" class="student-life hide">
+        <div class="student-container">
         <div class="img-header img-life">
             <p class="title-section">STUDENT LIFE </p>
         </div>
-        <div class="student-container">
+            <h2 class="sub-section"> Study Form</h2>
             <p>The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.</p>
 
             <p>The project tasks and the final project in particular, are independent tasks that you carry out on the basis of the theory that you have learned. The projects should be based on specific cases from businesses as far as this is possible. You will be given good advice and constructive criticism along the way.</p>
 
             <p>You must be prepared to make an independent effort and cooperate with your fellow students. The type of instruction gives you experience that you can use for solving both known and new issues. </p>
 
-            <h2>KEA Cafe + Moon Bar</h2>
+            <h2 class="sub-section">KEA Cafe + Moon Bar</h2>
 
             <p>Friday bar 14.00-22.00
                 <br>Discounted drinks + endless beer pong + foosball</p>
@@ -437,16 +436,15 @@
     </section>
     <!-- contact -->
     <section id="contact" class="contact hide">
+         <div class="contact-container">
         <div class="img-header img-contact">
             <p class="title-section">CONTACT</p>
         </div>
-        <div class="contact-container">
-            <div class="contact-more">
-                <p><b>Need to know more?</b>
+               <h2 class="sub-section">Need to know more?</h2>
+                <p>
                     <br>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.
                     <br><a href="http://keaconnect.dk/en/">Click here</a> for more information.
                 </p>
-            </div>
             <div class="contact-table">
                 <div class="email">
                     email:
