--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <p class="title-section">CONTACT</p>
         </div>
                <h2 class="sub-section">Need to know more?</h2>
-                <p>
+                <p class="contact-desc">
                     <br>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.
                     <br><a href="http://keaconnect.dk/en/">Click here</a> for more information.
                 </p>
@@ -472,10 +472,10 @@
                             <b>Address:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lygten 16, 2400 Copenhagen NV
                         </p>
                         <p>
-                            <br><b>Phone number:</b>&nbsp;&nbsp;&nbsp;&nbsp; +45 46 46 04 00
+                            <b>Phone number:</b>&nbsp;&nbsp;&nbsp;&nbsp; +45 46 46 04 00
                         </p>
                         <p>
-                            <br><b>E-mail:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; kea@kea.dk
+                            <b>E-mail:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; kea@kea.dk
                         </p>
                     </div>
                 </div>
