--- a/index.html
+++ b/index.html
@@ -425,13 +425,14 @@
         </div>
 
         <div class="career-container">
-            <h2 class="subtitle-career"> Top-up Your Education</h2>
+            <h2 class="sub-section"> Top-up Your Education</h2>
             <p>With a Multimedia Design + Communication education you can participate in a higher education programme. You can continue at KEA - Copenhagen School of Design and Technology and choose between: </p>
 
-            <p>BA in Web development (1 ½ year)</p>
-            <p>BA in Design + Business (1 ½ year)</p>
+            <p>BA in Web development (1 ½ year)
+            <br>BA in Design + Business (1 ½ year)
+            </p>
 
-            <h2 class="subtitle-career">From KEA + Beyond</h2>
+            <h2 class="sub-section">From KEA + Beyond</h2>
 
             <p>As an educated multimedia designer you will typically be able to work with designing, planning and managing multimedia tasks. You will also be able to contribute to the implementation, administration and maintenance of multimedia productions.</p>
 
