--- a/index.html
+++ b/index.html
@@ -469,14 +469,13 @@
                     </p>
 
                     <div class="contact-info">
-                        <p>
-                            <b>Address:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lygten 16, 2400 Copenhagen NV
+                        <p> <b>Address</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lygten 16, 2400 Copenhagen NV
                         </p>
                         <p>
-                            <br><b>Phone number:</b>&nbsp;&nbsp;&nbsp;&nbsp; +45 46 46 04 00
+                            <b>Phone number:</b>&nbsp;&nbsp;&nbsp;&nbsp; +45 46 46 04 00
                         </p>
                         <p>
-                            <br><b>E-mail:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; kea@kea.dk
+                            <b>E-mail:</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; kea@kea.dk
                         </p>
                     </div>
                 </div>
