--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <p class="title-section">CONTACT</p>
             </div>
             <h2 class="sub-section">Need to know more?</h2>
-            <p>
+            <p class="contact-desc">
                 <br>You are more than welcome to come to our <b>OPEN HOUSE</b> which will happen on 28 Febuary 12 p.m - 6 p.m.
                 <br><a href="http://keaconnect.dk/en/">Click here</a> for more information.
             </p>
