interactive boxes in study program

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 <div class="semester">
                     2nd Semester
                 </div>
-                <div class="project">
+                <div id="mmd1-btn" class="project">
                     Multimedia Production 1
                 </div>
-                <div class="project">
+                <div id="mmd2-btn" class="project">
                     Multimedia Production 2
                 </div>
 
@@ -103,16 +103,16 @@
                 <div class="semester">
                     4th Semester
                 </div>
-                <div class="project">
+                <div id="mmd3-btn" class="project">
                     Multimedia Production 3
                 </div>
-                <div class="project">
+                <div id="intern-btn" class="project">
                     Internship
                 </div>
-                <div class="project">
+                <div id="elect-btn" class="project">
                     Electives
                 </div>
-                <div class="project">
+                <div id="final-btn" class="project">
                     Final Exam
                 </div>
             </div>
@@ -120,9 +120,10 @@
     </section>
 
     <!-- mmd-production 1 -->
-    <div class="modal hide">
+    <div id="mmd1" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title">Multimedia Production 1 <span class="ects-points">30 ECTS</span></h2>
+            <span id="close-mmd1" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
                 <li>Communication and Presentation: 5 ECTS</li>
@@ -132,14 +133,14 @@
             <p class="description">
                 The first element is intended to provide the student with the qualifications needed to understand the company’s commercial framework and the multimedia designer’s role in the value chain in a multimedia production. The student must be able to understand digital media and to define, produce and present solutions for and produce digital user interfaces.
             </p>
-            <button class="modal-button">Multimedia Production 2</button>
         </aside>
     </div>
 
     <!-- mmd-production 2 -->
-    <div class="modal hide">
+    <div id="mmd2" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title">Multimedia Production 2 <span class="ects-points">30 ECTS</span></h2>
+            <span id="close-mmd2" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
                 <li>Communication and Presentation: 5 ECTS</li>
@@ -149,14 +150,14 @@
             <p class="description">
                 The second element is intended to provide the student with the qualifications needed to plan multimedia productions involving several participants. The student must be able to design and create digital user experiences by means of a user-oriented method and key programming principles.
             </p>
-            <button class="modal-button">Multimedia Production 3</button>
         </aside>
     </div>
 
     <!-- mdd production 3 -->
-    <div class="modal hide">
+    <div id="mmd3" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title">Multimedia Production 3 <span class="ects-points">20 ECTS</span></h2>
+            <span id="close-mmd3" class="close"></span>
             <ul class="list-points">
                 <li>Business: 5 ECTS</li>
                 <li>Communication and Presentation: 5 ECTS</li>
@@ -166,25 +167,25 @@
             <p class="description">
                 The third element is intended to provide the student with the qualifications needed to assess and apply international development trends to create innovative user experiences in digital media and user interfaces.The student must be able to handle and present large data sets in a digital user interface.
             </p>
-            <button class="modal-button">Electives</button>
         </aside>
     </div>
 
     <!-- electives -->
-    <div class="modal hide">
+    <div id="elect" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title">Electives <span class="ects-points">10 ECTS</span></h2>
+            <span id="close-elect" class="close"></span>
             <p class="description">
                 You you will be able to select one of several elective courses where you can specialise further in UX, UI or frontend development. Electives are developed on an ongoing basis with regard to relevance and demand
             </p>
-            <button class="modal-button">Internship</button>
         </aside>
     </div>
 
     <!-- internship-->
-    <div class="modal hide">
+    <div id="intern" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title">Internship<span class="ects-points">10 ECTS</span></h2>
+            <span id="close-intern" class="close"></span>
             <ul class="list-internship">
                 <span class="list-title">There are 5 different types of internships:</span>
                 <li>Workplace Internship</li>
@@ -196,18 +197,17 @@
             <p class="description">
                 Internships take place in the fourth semester. It is your opportunity to focus on the areas of your study programme which you find most interesting. The internship is equivalent to 15 ECTS-points, corresponding to 10 weeks full-time internship. As it is a full-time internship, the working week is 37 hours.
             </p>
-            <button class="modal-button">Final exam</button>
         </aside>
     </div>
 
     <!-- final exam-->
-    <div class="modal hide">
+    <div id="final" class="modal hide">
         <aside class="modal-content">
             <h2 class="modal-title"> Final Exam <span class="ects-points">15 ECTS</span></h2>
+            <span id="close-final" class="close"></span>
             <p class="description">
                 For the final examination you will write a paper and create a digital product within the scope of the programme. The objective of the final exam project is to document whether the student has acquired the qualifications needed to combine theoretical, methodological and practical elements and to communicate these.
             </p>
-            <button class="modal-button">Career</button>
         </aside>
     </div>
 
