fixed some bugs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     MULTIMEDIA DESIGN
                     <br>AND COMMUNICATION</p>
             </div>
-            <h2>What is MDD?</h2>
+            <h2>What is MMD?</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
@@ -251,9 +251,8 @@
                     ADMISSION
                 </p>
             </div>
+            <h2 class="sub-section">How do I apply?</h2>
             <div class="admission-desc">
-
-                <h2 class="sub-section">How do I apply?</h2>
                 
                 <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
 
