add website title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-    <title>Cur2</title>
+    <title>Multimedia designer</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                     MULTIMEDIA DESIGN
                     <br>AND COMMUNICATION</p>
             </div>
-            <h2>What is MMD?</h2>
+            <h2 class="sub-section">What is MMD?</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
