--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-<<<<<<< HEAD
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
-
-    <title>Cur2</title>
-=======
+   
     <title>Multimedia designer</title>
->>>>>>> 0faba0f29e4c11b4d111f98776189282121e8208
 </head>
 
 <body>
@@ -21,7 +17,7 @@
 
     </div>
     <nav>
-
+        <a href="#" class="nav-title">MMD</a>
         <a href="#" id="intro-nav">Introduction</a>
         <a href="#" id="program-nav">Study Program</a>
         <a href="#" id="adm-nav">Admission</a>
@@ -262,10 +258,7 @@
             </div>
             <h2 class="sub-section">How do I apply?</h2>
             <div class="admission-desc">
-<<<<<<< HEAD
-=======
                 
->>>>>>> 0faba0f29e4c11b4d111f98776189282121e8208
                 <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
 
                 <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
