small changes, removed img headers and added top-up nav

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <a href="#" class="nav-title">MMD</a>
         <a href="#" id="intro-nav">Introduction</a>
         <a href="#" id="program-nav">Study Program</a>
-        <a href="#" id="adm-nav">Admission</a>
-        <a href="#" id="abroad-nav">Study Abroad</a>
         <a href="#" id="student-nav">Student Life</a>
+        <a href="#" id="abroad-nav">Study Abroad</a>
+        <a href="#" id="top-nav">Top Up</a>
         <a href="#" id="career-nav">Career</a>
+        <a href="#" id="adm-nav">Admission</a>
         <a href="#" id="contact-nav">Contact</a>
     </nav>
     <!-- front -->
